# pyloc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyloc/: __init__.py  comments.json  main.py
src/pyloc/loc_counting/: __init__.py  loc_counting.py
